@@ -9,6 +9,7 @@ Date: ????
     - Add rocket launch silo suggestions
     - Add fuel / burnt fuel result suggestions
     - Use multiple columns when there are lots of item suggestions
+    - Added control tooltips per entity type
   Bugfixes:
     - Fixed crash when selecting a fluid from a signal as a filter by no longer showing non-item signals from the circuit network
 ---------------------------------------------------------------------------------------------------
